WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292444
Unable to get past the login view for TurboTax 2024
https://bugs.webkit.org/show_bug.cgi?id=292444
Summary
Unable to get past the login view for TurboTax 2024
Jessica Cheung
Reported
2025-05-02 10:57:08 PDT
rdar://148364602
Attachments
Add attachment
proposed patch, testcase, etc.
Jessica Cheung
Comment 1
2025-05-02 12:35:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44862
EWS
Comment 2
2025-05-02 13:51:40 PDT
Committed
294446@main
(0cfcee3f8b2d): <
https://commits.webkit.org/294446@main
> Reviewed commits have been landed. Closing PR #44862 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug