Unable to get past the login view for TurboTax 2024 https://bugs.webkit.org/show_bug.cgi?id=292444 rdar://148364602

Reviewed by Abrar Rahman Protyasha and Aditya Keerthi.

Add app check for TurboTax.
Add a new SDK-aligned behavior flag for Auto Layout
in web views.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::MacApplication::isTurboTax):

Canonical link: https://commits.webkit.org/294446@main